fix UI bugs
